button: fix button loading alignment
fix #1

--- a/src/elements/button.scss
+++ b/src/elements/button.scss
@@ -31,8 +31,11 @@
 		&:after {
 			content: "";
 			position: absolute;
+			left: 0;
+			right: 0;
 			height: 1rem;
 			width: 1rem;
+			margin: auto;
 			border: 2px solid;
 			border-radius: 999px;
 			animation: spinAround $timing-slowest infinite linear;
